[package]
authors = ["kivimango <balazsviktor23@gmail.com>"]
categories = ["command-line-utilities"]
description = "Yet another text mode twin-panel file manager for Redox OS inspired by Midnight and Total Commander"
edition = "2018"
keywords = ["filemanager", "text-user-interface", "sysadmin-tool"]
license = "Apache-2.0"
name = "twin-commander"
readme = "README.md"
repository = "https://github.com/kivimango/twin-commander"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.22", features = ["clock"], default-features = false}
dirs = "4.0.0"
# Not the best libary so far, but its do the job.Temporarily added for MVP completion.
# After MVP released, roll your own, or fix its issues on a fork, see issues: https://github.com/webdesus/fs_extra/issues
fs_extra = "1.2.0"
humansize = {version = "2.1.3", features = ["no_alloc"], default-features = false}
serde = {version = "1.0.152", features = ["derive"]}
termion = "2.0.3"
# For reading and writing config files
toml = "0.7.2"
tui = {version = "0.19", features = ["termion"], default-features = false}
tui-input = {version = "0.8.0", features = ["termion"], default-features = false}
tuirealm = { version = "^1.9.0", default-features = false, features = [ "derive", "ratatui", "termion" ] }
walkdir = "2.3.2"

[profile.release]
# Automatically strip symbols from the binary.
# By default on Linux and macOS, symbol information is included in the compiled .elf file.
# This information is not needed to properly execute the binary.
strip = true
# By default, Cargo instructs compilation units to be compiled and optimized in isolation.
# LTO instructs the linker to optimize at the link stage.
# This can, for example, remove dead code and often times reduces binary size.
lto = true
# By default, Cargo specifies 16 parallel codegen units for release builds.
# This improves compile times, but prevents some optimizations.
# Here, we are exchanging smaller binary for an increased (one-time) compile time.
codegen-units = 1
# TODO: build with build-std, see https://github.com/johnthagen/min-sized-rust#optimize-libstd-with-build-std
